# Electris

./: .dockerignore  .env.example  AGENTIC_DEVELOPER_PROTOCOL.md  BUILD_VERIFICATION_TODO.md  CLAUDE.md  COMPLETE_FIX_PLAN.md  CORRECTED_BUILD_NOTES.md  Cargo.toml  DEV_PROTOCOL.md  Dockerfile  FEATURES.md  Makefile  OPERATIONAL_VERIFICATION.md  PATCHSET_1_REPORT.md  PATCHSET_2_REPORT.md  README.md  SETUP_FOR_NEWBIE.md  SETUP_FOR_PROS.md  UPGRADE.md  VISION.md  check_output.txt  check_output_final.txt  check_output_new.txt  docker-compose.browser-sandbox.yml  docker-compose.yml  electro.toml
.claude/skills/: add-channel.md  add-memory-backend.md  add-provider.md  add-tool.md  debug-electro.md
.github/workflows/: ci.yml  deps.yml  release.yml
archive/: removed-surfaces.md  stale-claims.md
archive/build-history/: README.md  compile_errors_pre_stabilization.txt
archive/legacy/: MIGRATION.md  TEMM1E_ROADMAP.md  TEMM1E_VISION.md
archive/verification/: FINAL_VERIFICATION_REPORT.md  cargo_check.txt  cargo_test.txt  clippy.txt  command_classification.md  command_new_inventory.txt  commit.txt  git_status.txt
artifacts/: README.md  toolchain.txt
config/: default.toml
crates/electro-agent/: Cargo.toml
crates/electro-automation/: Cargo.toml
crates/electro-automation/src/: heartbeat.rs  lib.rs
crates/electro-channels/: Cargo.toml
crates/electro-codex-oauth/: Cargo.toml
crates/electro-codex-oauth/src/: callback_server.rs  lib.rs  responses_provider.rs  token_store.rs
crates/electro-core/: Cargo.toml
crates/electro-filestore/: Cargo.toml
crates/electro-gateway/: Cargo.toml
crates/electro-gateway/src/: dashboard.rs  health.rs  identity.rs  lib.rs  router.rs  server.rs  session.rs  setup_tokens.rs
crates/electro-gateway/tests/: health_integration.rs
crates/electro-hive/: Cargo.toml
crates/electro-hive/docs/swarm/experiment_artifacts/: BENCHMARK_REPORT.md
crates/electro-hive/src/: blackboard.rs  config.rs  dag.rs  lib.rs  pheromone.rs  queen.rs  types.rs  worker.rs
crates/electro-hive/tests/: context_degradation_bench.rs  live_ab_bench.rs  project_bench.rs  project_bench_py.rs  project_bench_v2.rs
crates/electro-mcp/: Cargo.toml
crates/electro-memory/: Cargo.toml
crates/electro-memory/src/: failover.rs  lib.rs  markdown.rs  search.rs  sqlite.rs  sqlite_usage.rs
crates/electro-memory/tests/: memory_integration.rs
crates/electro-observable/: Cargo.toml
crates/electro-observable/src/: lib.rs  metrics.rs  otel.rs
crates/electro-providers/: Cargo.toml
crates/electro-providers/src/: anthropic.rs  gemini.rs  lib.rs  openai_compat.rs
crates/electro-runtime/: Cargo.toml
crates/electro-runtime/src/: config.rs  events.rs  executor.rs  lib.rs  remote.rs  router.rs  runtime_handle.rs
crates/electro-skills/: Cargo.toml
crates/electro-skills/src/: lib.rs
crates/electro-test-utils/: Cargo.toml
crates/electro-test-utils/src/: lib.rs
crates/electro-tools/: Cargo.toml
crates/electro-tools/src/: browser.rs  browser_pool.rs  browser_runtime.rs  browser_session.rs  check_messages.rs  credential_scrub.rs  custom_tools.rs  file.rs  git.rs  key_manage.rs  lambda_recall.rs  lib.rs  memory_manage.rs  mode_switch.rs  network_guard.rs  policy.rs  prowl_blueprints.rs  runner.rs  send_file.rs  send_message.rs  shell.rs  usage_audit.rs  web_fetch.rs
crates/electro-tools/src/prowl_blueprints/: web_compare.md  web_extract.md  web_login.md  web_search.md
crates/electro-tui/: Cargo.toml
crates/electro-tui/src/: agent_bridge.rs  app.rs  channel.rs  event.rs  lib.rs
crates/electro-tui/src/input/: handler.rs  keybindings.rs
crates/electro-tui/src/onboarding/: oauth.rs  steps.rs
crates/electro-tui/src/views/: chat.rs  chat_enhanced.rs  mod.rs  onboarding.rs
crates/electro-tui/src/widgets/: activity_panel.rs  ai_face.rs  mod.rs  options_panel.rs
crates/electro-vault/: Cargo.toml
deploy/: electro.service
docker/: shell-runner.Dockerfile
docker/browser-proxy/: Dockerfile  squid.conf
docker/browser-sandbox/: Dockerfile  entrypoint.sh
docs/: BROWSER_HARDENING.md  BROWSER_SANDBOX.md  BROWSER_SANDBOX_UPGRADE_NOTES.md  CROSS_PROVIDER_HISTORY_SANITIZATION.md  HARDENING_NOTES.md  MODEL_REGISTRY.md  OTK_SECURE_KEY_SETUP.md  RELEASE_PROTOCOL.md  SHELL_RUNNER.md  STATUS.md  STICKER_SYSTEM.md  api.md  operations.md  ownership.md  runtime-flow.md  tool-sandbox.md
docs/agentic_core/: SNAPSHOT_v2.6.0.md
docs/api/: config.md  traits.md  types.md
docs/architecture/: vision.md
research/: RESEARCH_PAPER.md
scripts/: build_browser_sandbox.sh  build_shell_runner.sh  check_core_paths.sh  run_browser_sandbox.sh  smoke_browser_sandbox.sh  smoke_shell_runner.sh  stop_browser_sandbox.sh  verify_build.sh
spine/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  spine.toml.example
spine/crates/spine-config/: Cargo.toml
spine/crates/spine-config/src/: lib.rs  loader.rs
spine/crates/spine-core/: Cargo.toml
spine/crates/spine-core/src/: command.rs  event.rs  intent.rs  lib.rs  outcome.rs
spine/crates/spine-gateway/: Cargo.toml
spine/crates/spine-gateway/src/: lib.rs  routes.rs  server.rs
spine/crates/spine-gateway/tests/: e2e.rs
spine/crates/spine-llm/: Cargo.toml
spine/crates/spine-llm/src/: client.rs  lib.rs  providers.rs  types.rs
spine/crates/spine-runtime/: Cargo.toml
spine/crates/spine-runtime/src/: dispatcher.rs  lib.rs  planner.rs  runtime.rs
spine/crates/spine-runtime/tests/: integration.rs
spine/crates/spine-tools/: Cargo.toml
spine/crates/spine-tools/src/: fs.rs  git.rs  lib.rs  shell.rs
spine/crates/spine-worker/: Cargo.toml
spine/crates/spine-worker/src/: executor.rs  lib.rs  policy.rs  sandbox.rs
spine/scripts/: test-api.sh  verify.sh
spine/src/: main.rs
spine/tests/: integration.rs
src/: admin.rs  bootstrap.rs  cli.rs  daemon.rs  main.rs  onboarding.rs  reset.rs  server_mode.rs
tests/: e2e_cli_roundtrip.rs  e2e_gateway_no_direct_execution.rs  e2e_gateway_roundtrip.rs  e2e_remote_worker.rs  e2e_stop_cancel.rs  e2e_tool_sandbox.rs  e2e_tui_bridge_no_direct_execution.rs
(+201 files in other folders)
