[package]
name = "spine-server"
version = "0.1.0"
edition = "2021"
default-run = "spine-server"

[[bin]]
name = "spine-server"
path = "src/main.rs"

[dependencies]
spine-core = { path = "crates/spine-core" }
spine-runtime = { path = "crates/spine-runtime" }
spine-gateway = { path = "crates/spine-gateway" }
spine-config = { path = "crates/spine-config" }
spine-llm = { path = "crates/spine-llm" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[dev-dependencies]
serde_json = "1.0"

[workspace]
members = [
    "crates/spine-core",
    "crates/spine-runtime",
    "crates/spine-gateway",
    "crates/spine-worker",
    "crates/spine-tools",
    "crates/spine-config",
    "crates/spine-llm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
