[package]
name = "electro-codex-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OpenAI Codex OAuth + Responses API provider for ELECTRO"

[dependencies]
electro-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
async-trait.workspace = true
axum.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true
dirs.workspace = true
url.workspace = true

[dev-dependencies]
electro-test-utils.workspace = true
