[package]
name = "electro-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Persistent memory and storage for ELECTRO"

[features]
postgres = ["sqlx/postgres"]

[dependencies]
electro-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
async-trait.workspace = true
uuid.workspace = true
regex.workspace = true

[dev-dependencies]
electro-test-utils.workspace = true
tempfile = "3"
