[package]
name = "electro-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Test utilities and mocks for ELECTRO"

[dependencies]
electro-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
futures.workspace = true
bytes.workspace = true
