[package]
name = "electro-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Tool integrations for ELECTRO agents"

[features]
browser = ["dep:chromiumoxide", "dep:futures", "dep:base64", "dep:htmd"]

[dependencies]
electro-core.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true
chrono.workspace = true
dirs.workspace = true
zeroize.workspace = true
regex.workspace = true
url.workspace = true

# Optional: Browser automation
chromiumoxide = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
htmd = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
electro-test-utils.workspace = true
