[package]
name = "spine-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
spine-core = { path = "../spine-core" }
spine-runtime = { path = "../spine-runtime" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tower = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
